# fastApiProject-Shift

./: .env  .gitignore  README.md  alembic.ini  config.py  pyproject.toml
app/: database.py  endpoints.py  main.py  models.py  schemas.py
app/auth/: auth.py  database.py  manager.py  superuser.py
app/crud/: crud.py
app/endpoints/: salary_data.py
app/models/: models.py
app/schemas/: schemas.py
migrations/: env.py
migrations/versions/: 1fc65587da06_initial.py  276173cdc06e_initial.py  e01c02a372fa_initial.py
tests/: conftest.py  params.py  test_salary.py  testcases.py  utils.py
