[tool.poetry]
name = "fastapiproject-shift"
version = "0.1.0"
description = ""
authors = ["Anna <pompeeva.anna@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
uvicorn = "^0.29.0"
asyncpg = "^0.29.0"
fastapi-users = "^13.0.0"
pytest-asyncio = "^0.23.6"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "app",
]
asyncio_mode="auto"
